# oraliqnazoratbot

./: .env  pyproject.toml
onbot/: app.py
onbot/core/: config.py  loader.py  tools.py
onbot/handlers/: __init__.py  question.py
onbot/keyboard/: inline.py
onbot/models/: __init__.py  models.py
tests/: test_onbot.py
